Fix tab index, collapse button focus, outline hiding

--- a/app/css/hover-colors.css
+++ b/app/css/hover-colors.css
@@ -21,7 +21,9 @@
   background-color: var(--lime);
 }
 
-.hover-dark-lime:hover {
+.hover-dark-lime:hover,
+.hover-dark-lime:active,
+.hover-dark-lime:focus {
   color: var(--dark-lime);
 }
 
